--- a/index.html
+++ b/index.html
@@ -4,29 +4,34 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Studio</title>
-  </head>
-  <body>
+      <title>Studio</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+        <link href="./css/style.css" rel="stylesheet" />
+        </head>
+        <body>
+    <a href="/portfolio.html">portfolio</a>
     <header>
-      <a href="./index.html">WebStudio</a>
+      <a href="./index.html" class="logo"><span>Web</span>Studio</a>
       <nav>
         <ul>
-          <li><a href="#">Agencja</a></li>
-          <li><a href="#">Portfolio</a></li>
-          <li><a href="#">Kontakt</a></li>
+          <li><a class="nav-link" href="#">Agencja</a></li>
+          <li><a class="nav-link" href="#">Portfolio</a></li>
+          <li><a class="nav-link" href="#">Kontakt</a></li>
         </ul>
       </nav>
       <ul>
-      <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-      <li><a href="tel:+48111111111">+48 111 111 111</a></li>
-      </ul>>
+      <li><a class="contact-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+      <li><a class="contact-link" href="tel:+48111111111">+48 111 111 111</a></li>
+      </ul>
     </header>
     <main>
-      <section>
+      <section class="section-one">
         <h1>EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
-        <button type="button">Zamów usługę</button>
+        <button  type="button" class="order">Zamów usługę</button>
       </section>
-      <section>
+      <section class="section-two">
         <ul>
           <li>
             <h2>Lorem, ipsum.</h2>
@@ -67,7 +72,7 @@
         </ul>
       </section>
 
-      <section>
+      <section class="section-three">
         <h2>Czym sie zajmujemy</h2>
         <ul>
           <li>
@@ -96,7 +101,7 @@
           </li>
         </ul>
       </section>
-      <section>
+      <section class="section-four">
         <h2>Nasz zespół</h2>
         <ul>
           <li>
@@ -143,11 +148,12 @@
       </section>
     </main>
     <footer>
-      <a href="./index.html">WebStudio</a>
+      <a href="./index.html" class="logo"><span>Web</span>Studio</a>
+      <nav>
       <ul>
-        <li><address><a href="https://goo.gl/maps/eguT2LAgA7kUzeum9m"> Warszawa, Aleje Jerozolimskie 21</a></address>
-      <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-      <li><a href="tel:+48111111111">+48 111 111 111</a></li>
+      <li><address><a class="address-link" href="https://goo.gl/maps/eguT2LAgA7kUzeum9m"> Warszawa, Aleje Jerozolimskie 21</class=></address>
+      <li><a class="contact-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+      <li><a class="contact-link" href="tel:+48111111111">+48 111 111 111</a></li>
         </li>
       </ul>
     </footer>
