update index html file

--- a/portfolio.html
+++ b/portfolio.html
@@ -12,24 +12,24 @@
         <link href="style.css" rel="stylesheet" />
   </head>
   <body>
-    <a href="/index.html">index</a>
-    <header class="header-style">
-      <a href="./index.html" class="logo"><span>Web</span>Studio</a>
+      <header class="header-style">
+      <a href="./index.html" class="logo"><span class="blue-color">Web</span>Studio</a>
       <nav>
-        <ul>
+        <ul class="element-style">
+          <li><a class="nav-link" href="./index.html">main-page</a></li>
           <li><a class="nav-link" href="#">Agencja</a></li>
           <li><a class="nav-link" href="#">Portfolio</a></li>
           <li><a class="nav-link" href="#">Kontakt</a></li>
         </ul>
       </nav>
-      <ul>
+      <ul class="contact-link-style">
         <li><a class="contact-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
         <li><a class="contact-link" href="tel:+48111111111">+48 111 111 111</a></li>
       </ul>
     </header>
     <main>
       <section>
-        <ul>
+        <ul class="element-style">
           <li><button type="button">Wszystkie</button></li>
           <li><button type="button">Strony</button></li>
           <li><button type="button">Aplikacje</button></li>
@@ -38,7 +38,7 @@
         </ul>
       </section>
       <section>
-        <ul>
+        <ul class="element-style">
           <li>
             <img
               src="./images/technocrack.jpg"
@@ -132,8 +132,8 @@
       </section>
     </main>
      <footer class="footer-style">
-      <a href="./index.html" class="logo"><span>Web</span>Studio</a>
-      <ul>
+      <a href="./index.html" class="logo"><span class="blue-color">Web</span>Studio</a>
+      <ul class="element-style">
       <li><address><a class="address-link" href="https://goo.gl/maps/eguT2LAgA7kUzeum9m"> Warszawa, Aleje Jerozolimskie 21</a></address>
       <li><a class="contact-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
       <li><a class="contact-link" href="tel:+48111111111">+48 111 111 111</a></li>
