--- a/index.html
+++ b/index.html
@@ -11,17 +11,18 @@
         <link href="./css/style.css" rel="stylesheet" />
         </head>
         <body>
-    <a href="/portfolio.html">portfolio</a>
-    <header>
-      <a href="./index.html" class="logo"><span>Web</span>Studio</a>
+      <header>
+      <a href="./index.html" class="logo"><span class="blue-color">Web</span>Studio</a>
       <nav>
-        <ul>
+
+        <ul class="element-style">
+          <li><a class="nav-link" href="./portfolio.html">portfolio</a></li>
           <li><a class="nav-link" href="#">Agencja</a></li>
           <li><a class="nav-link" href="#">Portfolio</a></li>
           <li><a class="nav-link" href="#">Kontakt</a></li>
         </ul>
       </nav>
-      <ul>
+      <ul class="contact-link-style">
       <li><a class="contact-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
       <li><a class="contact-link" href="tel:+48111111111">+48 111 111 111</a></li>
       </ul>
@@ -74,7 +75,7 @@
 
       <section class="section-three">
         <h2>Czym sie zajmujemy</h2>
-        <ul>
+        <ul class="element-style">
           <li>
             <img
               src="./images/picture1.jpg"
@@ -103,7 +104,7 @@
       </section>
       <section class="section-four">
         <h2>Nasz zespół</h2>
-        <ul>
+        <ul class="element-style">
           <li>
             <img
               src="./images/picture4.jpg"
@@ -148,9 +149,9 @@
       </section>
     </main>
     <footer>
-      <a href="./index.html" class="logo"><span>Web</span>Studio</a>
+      <a href="./index.html" class="logo"><span class="blue-color">Web</span>Studio</a>
       <nav>
-      <ul>
+      <ul class="element-style">
       <li><address><a class="address-link" href="https://goo.gl/maps/eguT2LAgA7kUzeum9m"> Warszawa, Aleje Jerozolimskie 21</class=></address>
       <li><a class="contact-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
       <li><a class="contact-link" href="tel:+48111111111">+48 111 111 111</a></li>
