--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
         </head>
         <body>
       <header>
-      <a href="./index.html" class="logo"><span class="blue-color">Web</span>Studio</a>
+      <a href="./index.html" class="logo-header"><span class="blue-color">Web</span>Studio</a>
       <nav>
 
         <ul class="element-style">
-          <li><a class="nav-link" href="./portfolio.html">portfolio</a></li>
+          
           <li><a class="nav-link" href="#">Agencja</a></li>
-          <li><a class="nav-link" href="#">Portfolio</a></li>
+          <li><a class="nav-link" href="./portfolio.html">Portfolio</a></li>
           <li><a class="nav-link" href="#">Kontakt</a></li>
         </ul>
       </nav>
