--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
       </ul>
     </header>
     <main>
-      <section class="section-one">
-        <h1>EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
+      <section class="section-one-background">
+        <h1 class="section-one">EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
         <button  type="button" class="order">Zamów usługę</button>
       </section>
       <section class="section-two">
-        <ul>
+        <ul class="element-style">
           <li>
             <h2>Lorem, ipsum.</h2>
             <p>
@@ -102,14 +102,14 @@
           </li>
         </ul>
       </section>
-      <section class="section-four">
+      <section class="section-four-background">
         <h2>Nasz zespół</h2>
         <ul class="element-style">
           <li>
             <img
               src="./images/picture4.jpg"
-              width="370"
-              height="294"
+              width="270"
+              height="260"
               alt="photo of John Doe"
             />
             <h3>John Doe</h3>
@@ -118,8 +118,8 @@
           <li>
             <img
               src="./images/picture5.jpg"
-              width="370"
-              height="294"
+              width="270"
+              height="260"
               alt="photo of John Doe"
             />
             <h3>John Doe</h3>
@@ -128,8 +128,8 @@
           <li>
             <img
               src="./images/picture6.jpg"
-              width="370"
-              height="294"
+              width="270"
+              height="260"
               alt="photo of John Doe"
             />
             <h3>John Doe</h3>
@@ -138,8 +138,8 @@
           <li>
             <img
               src="./images/picture7.jpg"
-              width="370"
-              height="294"
+              width="270"
+              height="260"
               alt="photo of John Doe"
             />
             <h3>John Doe</h3>
