--- a/index.html
+++ b/index.html
@@ -16,9 +16,8 @@
       <nav>
 
         <ul class="element-style">
-          
-          <li><a class="nav-link" href="#">Agencja</a></li>
-          <li><a class="nav-link" href="./portfolio.html">Portfolio</a></li>
+          <li><a class="nav-link" href="./index.html">Agencja</a></li>
+          <li><a class="nav-link" href="./portfolio.html">Portfolio</li>
           <li><a class="nav-link" href="#">Kontakt</a></li>
         </ul>
       </nav>
@@ -28,7 +27,7 @@
       </ul>
     </header>
     <main>
-      <section class="section-one-background">
+      <section class="section-one">
         <h1 class="section-one">EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
         <button  type="button" class="order">Zamów usługę</button>
       </section>
@@ -102,7 +101,7 @@
           </li>
         </ul>
       </section>
-      <section class="section-four-background">
+      <section class="section-four">
         <h2>Nasz zespół</h2>
         <ul class="element-style">
           <li>
@@ -151,12 +150,14 @@
     <footer>
       <a href="./index.html" class="logo"><span class="blue-color">Web</span>Studio</a>
       <nav>
+      <address>
       <ul class="element-style">
-      <li><address><a class="address-link" href="https://goo.gl/maps/eguT2LAgA7kUzeum9m"> Warszawa, Aleje Jerozolimskie 21</class=></address>
+      <li><a class="address-link" href="https://goo.gl/maps/eguT2LAgA7kUzeum9m">Warszawa, Aleje Jerozolimskie 21</a></li>
       <li><a class="contact-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
       <li><a class="contact-link" href="tel:+48111111111">+48 111 111 111</a></li>
         </li>
       </ul>
+      </address>
     </footer>
   </body>
 </html>
