--- a/portfolio.html
+++ b/portfolio.html
@@ -15,9 +15,8 @@
       <header class="header-style">
       <a href="./index.html" class="logo-header"><span class="blue-color">Web</span>Studio</a>
       <nav>
-        <ul class="element-style">
-          <li><a class="nav-link" href="./index.html">main-page</a></li>
-          <li><a class="nav-link" href="#">Agencja</a></li>
+          <ul class="element-style">
+          <li><a class="nav-link" href="./index.html">Agencja</a></li>
           <li><a class="nav-link" href="./portfolio.html">Portfolio</li>
           <li><a class="nav-link" href="#">Kontakt</a></li>
         </ul>
@@ -28,7 +27,7 @@
       </ul>
     </header>
     <main>
-      <section>
+      <section class="section-portfolio">
         <ul class="element-style">
           <li><button type="button">Wszystkie</button></li>
           <li><button type="button">Strony</button></li>
@@ -36,8 +35,6 @@
           <li><button type="button">Dizajn</button></li>
           <li><button type="button">Marketing</button></li>
         </ul>
-      </section>
-      <section>
         <ul class="element-style">
           <li>
             <img
@@ -131,14 +128,17 @@
             </li>
       </section>
     </main>
-     <footer class="footer-style">
+      <footer>
       <a href="./index.html" class="logo"><span class="blue-color">Web</span>Studio</a>
+      <nav>
+      <address>
       <ul class="element-style">
-      <li><address><a class="address-link" href="https://goo.gl/maps/eguT2LAgA7kUzeum9m"> Warszawa, Aleje Jerozolimskie 21</a></address>
+      <li><a class="address-link" href="https://goo.gl/maps/eguT2LAgA7kUzeum9m">Warszawa, Aleje Jerozolimskie 21</a></li>
       <li><a class="contact-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
       <li><a class="contact-link" href="tel:+48111111111">+48 111 111 111</a></li>
         </li>
       </ul>
+      </address>
     </footer>
   </body>
 </html>
