update index htm file

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <nav>
 
         <ul class="element-style">
-          <li><a class="nav-link" href="./index.html">Agencja</a></li>
+          <li><a class="nav-link current" href="./index.html">Agencja</a></li>
           <li><a class="nav-link" href="./portfolio.html">Portfolio</li>
           <li><a class="nav-link" href="#">Kontakt</a></li>
         </ul>
@@ -73,7 +73,7 @@
       </section>
 
       <section class="section-three">
-        <h2>Czym sie zajmujemy</h2>
+        <h2 class="section-three">Czym sie zajmujemy</h2>
         <ul class="element-style">
           <li>
             <img
@@ -102,7 +102,7 @@
         </ul>
       </section>
       <section class="section-four">
-        <h2>Nasz zespół</h2>
+        <h2 class="section-four">Nasz zespół</h2>
         <ul class="element-style">
           <li>
             <img
