--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,7 @@
       <nav>
           <ul class="element-style">
           <li><a class="nav-link" href="./index.html">Agencja</a></li>
-          <li><a class="nav-link" href="./portfolio.html">Portfolio</li>
+          <li><a class="nav-link current" href="./portfolio.html">Portfolio</li>
           <li><a class="nav-link" href="#">Kontakt</a></li>
         </ul>
       </nav>
@@ -27,8 +27,8 @@
       </ul>
     </header>
     <main>
-      <section class="section-portfolio">
-        <ul class="element-style">
+      <section class="section-four">
+        <ul class="element-style portfolio-button">
           <li><button type="button">Wszystkie</button></li>
           <li><button type="button">Strony</button></li>
           <li><button type="button">Aplikacje</button></li>
